// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchichalDataTable renders correctly for NBC_AND_PNC module: hierarchicalDataTable 1`] = `
<Table
  borderless={true}
  responsiveTag="div"
  striped={true}
  tag="table"
>
  <table
    className="table table-borderless table-striped"
  >
    <thead
      id="header"
    >
      <tr>
        <th
          className="default-width"
        />
        <th
          className="default-width"
        >
          Red Alert
        </th>
        <th
          className="default-width"
        >
          Risk
        </th>
        <th
          className="default-width"
        >
          No Risk
        </th>
        <th
          className="default-width totals"
        >
          Total
        </th>
      </tr>
    </thead>
    <tbody
      id="body"
    >
      <tr
        className="cursor-pointer color-blue"
        key="eccfe905-0e03-4188-98bc-22f141cccd0e"
        onClick={[Function]}
      >
        <td
          className="default-width"
        >
          Kon Tum
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          5
        </td>
        <td
          className="default-width "
        >
          1
        </td>
        <td
          className="default-width totals"
        >
          6
        </td>
      </tr>
      <tr
        className="cursor-pointer color-blue"
        key="c8054fa5-2d63-4cb5-bc52-173a4eb367fd"
        onClick={[Function]}
      >
        <td
          className="default-width"
        >
          Gia Lai
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width totals"
        >
          0
        </td>
      </tr>
      <tr
        className="cursor-pointer color-blue"
        key="1b8b7a76-15e1-446b-9d1e-c8cc97777a28"
        onClick={[Function]}
      >
        <td
          className="default-width"
        >
          Điện Biên
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          1
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width totals"
        >
          1
        </td>
      </tr>
      <tr
        className="totals-row"
        key="total"
      >
        <td
          className="default-width"
          id="total"
        >
          Total (Province)
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          6
        </td>
        <td
          className="default-width "
        >
          1
        </td>
        <td
          className="default-width"
        >
          7
        </td>
      </tr>
    </tbody>
  </table>
</Table>
`;

exports[`HierarchichalDataTable renders correctly for Nutrition module: hierarchicalDataTable 1`] = `
<Table
  borderless={true}
  responsiveTag="div"
  striped={true}
  tag="table"
>
  <table
    className="table table-borderless table-striped"
  >
    <thead
      id="header"
    >
      <tr>
        <th
          className="default-width"
        />
        <th
          className="default-width"
        >
          Stunted
        </th>
        <th
          className="default-width"
        >
          Severe Wasting
        </th>
        <th
          className="default-width"
        >
          Overweight
        </th>
        <th
          className="default-width"
        >
          Inappropriately Fed
        </th>
        <th
          className="default-width"
        >
          Normal
        </th>
        <th
          className="default-width totals"
        >
          Total
        </th>
      </tr>
    </thead>
    <tbody
      id="body"
    >
      <tr
        className="cursor-pointer color-blue"
        key="eccfe905-0e03-4188-98bc-22f141cccd0e"
        onClick={[Function]}
      >
        <td
          className="default-width"
        >
          Kon Tum
        </td>
        <td
          className="default-width "
        >
          4
        </td>
        <td
          className="default-width "
        >
          3
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          3
        </td>
        <td
          className="default-width "
        >
          6
        </td>
        <td
          className="default-width totals"
        >
          16
        </td>
      </tr>
      <tr
        className="cursor-pointer color-blue"
        key="c8054fa5-2d63-4cb5-bc52-173a4eb367fd"
        onClick={[Function]}
      >
        <td
          className="default-width"
        >
          Gia Lai
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width totals"
        >
          0
        </td>
      </tr>
      <tr
        className="cursor-pointer color-blue"
        key="1b8b7a76-15e1-446b-9d1e-c8cc97777a28"
        onClick={[Function]}
      >
        <td
          className="default-width"
        >
          Điện Biên
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width totals"
        >
          0
        </td>
      </tr>
      <tr
        className="totals-row"
        key="total"
      >
        <td
          className="default-width"
          id="total"
        >
          Total (Province)
        </td>
        <td
          className="default-width "
        >
          4
        </td>
        <td
          className="default-width "
        >
          3
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          3
        </td>
        <td
          className="default-width "
        >
          6
        </td>
        <td
          className="default-width"
        >
          16
        </td>
      </tr>
    </tbody>
  </table>
</Table>
`;

exports[`HierarchichalDataTable renders correctly for Pregnancy module: hierarchicalDataTable 1`] = `
<Table
  borderless={true}
  responsiveTag="div"
  striped={true}
  tag="table"
>
  <table
    className="table table-borderless table-striped"
  >
    <thead
      id="header"
    >
      <tr>
        <th
          className="default-width"
        />
        <th
          className="default-width"
        >
          Red Alert
        </th>
        <th
          className="default-width"
        >
          Risk
        </th>
        <th
          className="default-width"
        >
          No Risk
        </th>
        <th
          className="default-width totals"
        >
          Total
        </th>
      </tr>
    </thead>
    <tbody
      id="body"
    >
      <tr
        className="cursor-pointer color-blue"
        key="eccfe905-0e03-4188-98bc-22f141cccd0e"
        onClick={[Function]}
      >
        <td
          className="default-width"
        >
          Kon Tum
        </td>
        <td
          className="default-width "
        >
          3
        </td>
        <td
          className="default-width "
        >
          6
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width totals"
        >
          9
        </td>
      </tr>
      <tr
        className="cursor-pointer color-blue"
        key="c8054fa5-2d63-4cb5-bc52-173a4eb367fd"
        onClick={[Function]}
      >
        <td
          className="default-width"
        >
          Gia Lai
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width totals"
        >
          0
        </td>
      </tr>
      <tr
        className="cursor-pointer color-blue"
        key="1b8b7a76-15e1-446b-9d1e-c8cc97777a28"
        onClick={[Function]}
      >
        <td
          className="default-width"
        >
          Điện Biên
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width totals"
        >
          0
        </td>
      </tr>
      <tr
        className="totals-row"
        key="total"
      >
        <td
          className="default-width"
          id="total"
        >
          Total (Province)
        </td>
        <td
          className="default-width "
        >
          3
        </td>
        <td
          className="default-width "
        >
          6
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width"
        >
          9
        </td>
      </tr>
    </tbody>
  </table>
</Table>
`;
